REGRESSION(r290175): Texture upload from video and user media is slower than expected for non-GPUP WebGL https://bugs.webkit.org/show_bug.cgi?id=237034

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-02-23
Reviewed by Youenn Fablet.

Add back the code-path to obtain the IOSurface backed CVPixelBuffers directly
via IPC transfer. This is used on macOS where WebGL is in WP.

* GPUProcess/media/RemoteVideoFrameObjectHeap.cpp:
(WebKit::RemoteVideoFrameObjectHeap::pixelBuffer):
* GPUProcess/media/RemoteVideoFrameObjectHeap.h:
* GPUProcess/media/RemoteVideoFrameObjectHeap.messages.in:
* WebProcess/GPU/media/RemoteVideoFrameProxy.cpp:
(WebKit::RemoteVideoFrameProxy::pixelBuffer const):
* WebProcess/GPU/media/RemoteVideoFrameProxy.h:


Canonical link: https://commits.webkit.org/247721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290413 268f45cc-cd09-0410-ab3c-d52691b4dbfc