Source/WebKit/WebProcess/GPU/media/RemoteVideoFrameProxy.h
@@ -94,6 +94,7 @@ public:
 
 private:
     RemoteVideoFrameProxy(IPC::Connection&, RemoteVideoFrameObjectHeapProxy&, Properties&&);
+    static inline Seconds defaultTimeout = 10_s;
 
     const Ref<IPC::Connection> m_connection;
     RemoteVideoFrameReferenceTracker m_referenceTracker;
